samples/_failures_safe/1761548190_7a2648_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0e5a4a4.c: In function ‘main’:
./samples/SAFE/__tmp_d0e5a4a4.c:137:9: error: expected expression at end of input
  137 |         if (strncmp(line, "END", 3) ==
      |         ^~
./samples/SAFE/__tmp_d0e5a4a4.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0e5a4a4.c:137:9: error: expected declaration or statement at end of input
